# micro-manager

DeviceAdapters/: Makefile.am  configure.ac
DeviceAdapters/AOTF/: AOTF.cpp  AOTF.h
DeviceAdapters/ASIFW1000/: ASIFW1000.cpp  ASIFW1000.h  ASIFW1000Hub.cpp  ASIFW1000Hub.h
DeviceAdapters/ASIStage/: ASIStage.cpp  ASIStage.h
DeviceAdapters/ASITiger/: ASIBase.h  ASICRISP.cpp  ASICRISP.h  ASIClocked.cpp  ASIClocked.h  ASIFWheel.cpp  ASIFWheel.h  ASIHub.cpp  ASIHub.h  ASILED.cpp  ASILED.h  ASIPLogic.cpp  ASIPLogic.h  ASIPeripheralBase.h  ASIPiezo.cpp  ASIPiezo.h  ASIScanner.cpp  ASIScanner.h  ASITiger.cpp  ASITiger.h  ASITigerComm.cpp  ASITigerComm.h  ASIXYStage.cpp  ASIXYStage.h  (+2 more)
DeviceAdapters/SerialShutter/: Makefile.am  README.md  SerialShutter.cpp  SerialShutter.h  SerialShutter.vcxproj  SerialShutter.vcxproj.filters
MMCore/: CircularBuffer.cpp  CircularBuffer.h  ConfigGroup.h  Configuration.cpp  Configuration.h  CoreCallback.cpp  CoreCallback.h  CoreProperty.cpp  CoreProperty.h  CoreUtils.h  DeviceManager.cpp  DeviceManager.h  Error.cpp  Error.h  ErrorCodes.h  Host.cpp  Host.h  MMCore.cpp  MMCore.h  MMEventCallback.h  PluginManager.cpp  PluginManager.h
MMDevice/: Debayer.cpp  Debayer.h  DeviceBase.h  DeviceThreads.h  DeviceUtils.cpp  DeviceUtils.h  ImageMetadata.h  ImgBuffer.cpp  ImgBuffer.h  MMDevice.cpp  MMDevice.h  MMDeviceConstants.h  ModuleInterface.cpp  ModuleInterface.h  Property.cpp  Property.h
Util/: Brent.h
autofocus/: Autofocus.java  AutofocusDuo.java  HardwareFocusExtender.java  OughtaFocus.java
mmstudio/: build.xml
plugins/: Makefile.am
(+1279 files in other folders)
