
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS) $(BOOST_CPPFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_SerialShutter.la
libmmgr_dal_SerialShutter_la_SOURCES = SerialShutter.cpp SerialShutter.h
libmmgr_dal_SerialShutter_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_SerialShutter_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = license.txt
